--- a/public/docer.css
+++ b/public/docer.css
@@ -107,3 +107,10 @@ a {
     margin-bottom: 30px;
     margin-top: 75px;
 }
+
+.filename{
+    /*height: 20px;*/
+    overflow: hidden;/*超出部分隐藏*/
+    /*white-space: nowrap;!*不换行*!*/
+    text-overflow:ellipsis;/*超出部分文字以...显示*/
+}
