--- a/view/index.html
+++ b/view/index.html
@@ -34,8 +34,29 @@
                 </div>
                 <form method="get" v-bind:action="'/edit/'+newFilename">
                     <div class="modal-body">
-                        <input type="text" class="form-control" v-model="newFilename" required="required">
+                        <input type="text" class="form-control" v-model="newFilename" required="required" autofocus>
                         <input type="hidden" name="create" value="1">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary">确定</button>
+                    </div>
+                </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div>
+    <!--modal end-->
+    <div class="modal fade" id="fileModal" tabindex="-1" role="dialog" aria-labelledby="fileModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h3 class="modal-title" id="fileModalLabel">上传本地文档</h3>
+                </div>
+                <form method="post" action="/upload" enctype="multipart/form-data">
+                    <div class="modal-body">
+                        <input type="file" name="file" required="required">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
@@ -71,6 +92,15 @@
                     </a>
                 </div>
             </div>
+
+            <div class="col-xs-3 col-md-2">
+                <div class="card">
+                    <a data-toggle="modal" data-target="#fileModal">
+                        <img src="/public/upload.png">
+                        <div>本地文档</div>
+                    </a>
+                </div>
+            </div>
         </div>
         <br>
         <div class="row">
@@ -80,15 +110,19 @@
             <div class="col-xs-3 col-md-2" v-for="file in folder.files">
                 <div class="card">
 
-                    <a v-bind:href="'/edit/'+file.name">
+                    <a v-bind:href="'/edit/'+file.name" data-toggle="tooltip"
+                       v-bind:title="file.name">
                         <img src="/public/file.png">
-                        <div>${file.name}</div>
+                        <div class="filename">${file.name}</div>
                         <div>${file.modTime}</div>
                         <div>${file.size}</div>
                     </a>
                     <div>
-                        <button class="btn btn-xs" v-on:click="delArticle(file.name)"><span
-                                    class="glyphicon glyphicon-trash"></span></button>
+                        <a v-on:click="delArticle(file.name)"><span
+                                    class="glyphicon glyphicon-trash"></span></a>
+                        |
+                        <a v-bind:href="'/download/'+file.name"><span
+                                    class="glyphicon glyphicon-cloud-download"></span></a>
                     </div>
                 </div>
             </div>
@@ -120,6 +154,11 @@
                         vm.folder = response.data; // 这里不能用this，否则无法跟新
                     });
                 $('#folderModal').modal('show');
+            },
+            downloadArticle: function (name) {
+                axios.get('/download/' + name)
+                    .then(function (response) {
+                    });
             },
             delArticle: function (name) {
                 var r = confirm("确定要删除 " + name + " ?");
