--- a/view/login.html
+++ b/view/login.html
@@ -33,9 +33,9 @@
 </div>
 <div class="container content">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-xs-12">
+        <div class="col-md-4 col-md-offset-4 col-xs-12">
             <h1>登录</h1>
-            <form class="form-inline" role="form" method="post" action="/login">
+            <form class="form-group" role="form" method="post" action="/login">
                 <div class="form-group">
                     <label class="sr-only" for="name">用户名</label>
                     <input type="text" class="form-control" name="username" placeholder="用户名">
@@ -44,7 +44,7 @@
                     <label class="sr-only" for="inputfile">密码</label>
                     <input type="password" name="pwd" class="form-control" placeholder="密码">
                 </div>
-                <button type="submit" class="btn btn-success btn-sm">提交</button>
+                <button type="submit" class="btn btn-success btn-sm btn-block">提交</button>
             </form>
             <p style="margin-top: 10px;" >没有账号？ <a href="#">注册</a></p>
         </div>
