--- a/public/docer.css
+++ b/public/docer.css
@@ -51,7 +51,7 @@ select:hover {
     background: RoyalBlue;
     color: white;
     height: 33px;
-    padding: 5px 10px;
+    padding: 5px 50px 5px 15px;
     font-size: 14px;
     line-height: 1.5;
 }
